fix: fix z-index of map in detail view

--- a/blocks/detail-viewer/components/ObjectRenderer/GeoCoordinatesRenderer/GeoCoordinatesRenderer.css
+++ b/blocks/detail-viewer/components/ObjectRenderer/GeoCoordinatesRenderer/GeoCoordinatesRenderer.css
@@ -8,6 +8,7 @@
   left: 0;
   position: relative;
   right: 0;
+  z-index: 1;
 }
 
 :global(.leaflet-interactive) {
